[gd_scene load_steps=3 format=2]

[ext_resource path="res://core/update/scripts/UpdateUI.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.760784 )

[node name="UpdateUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="V" type="HBoxContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -350.0
margin_right = 1024.0
margin_bottom = 350.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Left" type="VBoxContainer" parent="V"]
margin_right = 510.0
margin_bottom = 700.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="State" type="Label" parent="V/Left"]
margin_right = 510.0
margin_bottom = 14.0

[node name="Log" type="RichTextLabel" parent="V/Left"]
margin_top = 18.0
margin_right = 510.0
margin_bottom = 628.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 1 )
scroll_following = true

[node name="SwitchScene" type="Button" parent="V/Left"]
margin_top = 632.0
margin_right = 510.0
margin_bottom = 652.0
text = "Switch Scene"

[node name="RunServer" type="Button" parent="V/Left"]
margin_top = 656.0
margin_right = 510.0
margin_bottom = 676.0
text = "Run Update Server"

[node name="RunClient" type="Button" parent="V/Left"]
margin_top = 680.0
margin_right = 510.0
margin_bottom = 700.0
text = "Run Client Update"

[node name="ClientStatus" type="VBoxContainer" parent="V"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 700.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Network" type="Label" parent="V/ClientStatus"]
margin_right = 510.0
margin_bottom = 14.0
text = "Network is : unknown"

[node name="Server" type="Label" parent="V/ClientStatus"]
margin_top = 18.0
margin_right = 510.0
margin_bottom = 32.0
text = "Server connection : unknown"

[node name="ServerStatus" type="Label" parent="V/ClientStatus"]
margin_top = 36.0
margin_right = 510.0
margin_bottom = 50.0
text = "Server status : unknown"

[node name="Protocol" type="Label" parent="V/ClientStatus"]
margin_top = 54.0
margin_right = 510.0
margin_bottom = 68.0
text = "Protocol version ok: unknown"

[node name="Update" type="Label" parent="V/ClientStatus"]
margin_top = 72.0
margin_right = 510.0
margin_bottom = 86.0
text = "Update required: unknown"

[node name="StartUpdate" type="Button" parent="V/ClientStatus"]
margin_top = 90.0
margin_right = 510.0
margin_bottom = 110.0
disabled = true
text = "Start Update Process"

[node name="UpdateSize" type="Label" parent="V/ClientStatus"]
margin_top = 114.0
margin_right = 510.0
margin_bottom = 128.0
text = "Update size: unknown"

[node name="Progress" type="Label" parent="V/ClientStatus"]
margin_top = 132.0
margin_right = 510.0
margin_bottom = 146.0
text = "Progress:"

[node name="Label8" type="Label" parent="V/ClientStatus"]
margin_top = 150.0
margin_right = 510.0
margin_bottom = 164.0

[node name="Options" type="Node" parent="."]

[node name="NoCamera" type="Node" parent="Options"]
[connection signal="pressed" from="V/Left/SwitchScene" to="." method="SwitchScene"]
[connection signal="pressed" from="V/Left/RunServer" to="." method="RunUpdateServer"]
[connection signal="pressed" from="V/Left/RunClient" to="." method="RunUpdateClient"]
[connection signal="pressed" from="V/ClientStatus/StartUpdate" to="." method="_on_StartUpdate_pressed"]
